# facesearch

./: .gitignore  README.md  design.md  install.sh  pyproject.toml  requirements.txt  start.sh
backend/: config.py  main.py  reference.py  scraper.py  search.py
data/reference/: Untitled4.xxxx  Untitled9.xxxx
deploy/: apache-vhost.conf  xddsearch.service
frontend/: app.js  index.html  style.css
