[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "xddsearch"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.18.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.9.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
xddsearch = "backend.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
